--- a/service-layer/Gemfile
+++ b/service-layer/Gemfile
@@ -21,7 +21,7 @@ gem "sprockets", ">= 3.0.0"
 gem "title"
 gem "uglifier"
 gem "bootsnap", require: false
-
+gem "rubocop", require: false
 
 group :development do
   gem "listen"
