Rough initial pass of implementating Oauth

--- a/service-layer/Gemfile
+++ b/service-layer/Gemfile
@@ -60,3 +60,5 @@ gem 'bourbon', '~> 5.0'
 gem 'neat', '~> 2.1'
 gem 'high_voltage'
 gem 'simple_form'
+gem 'httparty'
+gem 'omniauth-canvas', github: 'atomicjolt/omniauth-canvas'
