Switched config.yml to environment variables
Switched to environment variables.
To use ENV run `bundle install to install figaro`
Then run `bundle exec figaro install` which will add an config/application.yml
and put it into git ignore. Place all of your environement variables
into the config/application.yml file.

For reference look at figaro on github
[https://github.com/laserlemon/figaro](https://github.com/laserlemon/figaro)

--- a/service-layer/.gitignore
+++ b/service-layer/.gitignore
@@ -20,4 +20,6 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
-/config/config.yml
+
+# Ignore application configuration
+/config/application.yml
