--- a/service-layer/Gemfile
+++ b/service-layer/Gemfile
@@ -13,6 +13,7 @@ gem 'rails', '~> 5.2.1'
 # gem 'bcrypt', '~> 3.1.7'
 
 gem "autoprefixer-rails"
+gem "figaro"
 gem "honeybadger"
 gem "jquery-rails"
 gem "pg"
