Set up VCR for testing.
The tests do not run yet, but I set up VCR to record api calls and play
them back for testing.

--- a/service-layer/Gemfile
+++ b/service-layer/Gemfile
@@ -43,8 +43,8 @@ group :development, :test do
   gem "byebug", platforms: [:mri, :mingw, :x64_mingw]
   gem "factory_bot_rails"
   gem "rspec-rails", "~> 3.6"
-  gem "spring-commands-rspec", group: :development
-  gem "suspenders", group: [:development, :test]
+  gem "spring-commands-rspec"
+  gem "suspenders"
 end
 
 group :development do
@@ -59,4 +59,6 @@ group :test do
   gem "capybara-selenium"
   gem "chromedriver-helper"
   gem "shoulda-matchers"
+  gem "vcr"
+  gem "webmock"
 end
