--- a/service-layer/.rubocop.yml
+++ b/service-layer/.rubocop.yml
@@ -59,6 +59,9 @@ Metrics/ModuleLength:
   Description: 'Avoid modules longer than 100 lines of code.'
   Enabled: false
 
+Metrics/LineLength:
+  Max: 100
+
 Style/ClassVars:
   Description: 'Avoid the use of class variables.'
   StyleGuide: 'https://github.com/bbatsov/ruby-style-guide#no-class-vars'
