Added base test for aws cognito and semantic ui

--- a/front-end/package.json
+++ b/front-end/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "amazon-cognito-identity-js": "^3.0.3",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
-    "react-scripts": "2.1.0"
+    "react-scripts": "2.1.0",
+    "semantic-ui-react": "^0.83.0"
   },
   "scripts": {
     "start": "PORT=8000 react-scripts start",
@@ -21,5 +23,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "json-loader": "^0.5.7",
+    "webpack": "4.25.1"
+  }
 }
