--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
       - run:
           name: install dependencies
           command: |
-            bundle install --jobs=4 --retry=3 --path service-layer/vendor/bundle
+            bundle install --jobs=4 --retry=3 --path service-layer
 
       - save_cache:
           paths:
