--- a/front-end/package.json
+++ b/front-end/package.json
@@ -25,7 +25,6 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "json-loader": "^0.5.7",
-    "webpack": "4.25.1"
+    "json-loader": "^0.5.7"
   }
 }
