--- a/front-end/package.json
+++ b/front-end/package.json
@@ -6,6 +6,7 @@
     "amazon-cognito-identity-js": "^3.0.3",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.0",
     "semantic-ui-react": "^0.83.0"
   },
