--- a/service-layer/Gemfile
+++ b/service-layer/Gemfile
@@ -12,25 +12,25 @@ gem "rails", "~> 5.2.1"
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
 
-gem "autoprefixer-rails"
-gem "delayed_job_active_record"
-gem "figaro"
-gem "high_voltage"
-gem "honeybadger"
-gem "httparty"
-gem "jquery-rails"
+gem "autoprefixer-rails", '~> 9.3.1'
+gem "delayed_job_active_record", '~> 4.1.3'
+gem "figaro", '~> 1.1.1'
+gem "high_voltage", '~> 3.1.0'
+gem "honeybadger", '~> 4.1.0'
+gem "httparty", '~> 0.16.2'
+gem "jquery-rails", '~> 4.3.3'
 gem "omniauth-canvas", github: "atomicjolt/omniauth-canvas"
-gem "pg"
-gem "puma"
-gem "rack-canonical-host"
-gem "recipient_interceptor"
+gem "pg", '~> 1.1.3'
+gem "puma", '~> 3.12.0'
+gem "rack-canonical-host", '~> 0.2.3'
+gem "recipient_interceptor", '~> 0.2.0'
 gem "rubocop", require: false
 gem "sass-rails", "~> 5.0"
-gem "skylight"
+gem "skylight", '~> 3.1.1'
 gem "sprockets", ">= 3.0.0"
-gem "title"
+gem "title", '~> 0.0.7'
 gem "tzinfo-data", platforms: [:mingw, :mswin, :x64_mingw, :jruby]
-gem "uglifier"
+gem "uglifier", '~> 4.1.19'
 
 # Reduces boot times through caching; required in config/boot.rb
 gem "bootsnap", ">= 1.1.0", require: false
@@ -48,6 +48,11 @@ group :development, :test do
   gem "rspec-rails", "~> 3.6"
   gem "spring-commands-rspec"
   gem "suspenders"
+  gem 'pry-rails', '~> 0.3.6'
+  gem 'hirb', '~> 0.7.3'
+  gem 'annotate', '~> 2.7', '>= 2.7.2'
+  gem 'guard', '~> 2.14', '>= 2.14.2'
+  gem 'guard-rspec', '~> 4.7', '>= 4.7.3', require: false
 end
 
 group :development do
