--- a/service-layer/Gemfile
+++ b/service-layer/Gemfile
@@ -31,6 +31,7 @@ gem "sprockets", ">= 3.0.0"
 gem "title"
 gem "tzinfo-data", platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 gem "uglifier"
+gem "rack-cors", require: "rack/cors"
 
 # Reduces boot times through caching; required in config/boot.rb
 gem "bootsnap", ">= 1.1.0", require: false
