114 Further work for Viewing Learning Objectives
Cleaned up code and added tests. Current commit the learning objectives list
route will not work at present, needs a course_id parameter. Will be
most likely calling from learning path component so will have to adjust

--- a/front-end/package.json
+++ b/front-end/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "amazon-cognito-identity-js": "^3.0.3",
+    "dotenv": "^6.1.0",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-router-dom": "^4.3.1",
