--- a/service-layer/Gemfile
+++ b/service-layer/Gemfile
@@ -37,7 +37,7 @@ gem "rack-cors", require: "rack/cors"
 gem "bootsnap", ">= 1.1.0", require: false
 
 # Use Rack CORS for handling Cross-Origin Resource Sharing (CORS), making cross-origin AJAX possible
-gem 'rack-cors'
+# gem 'rack-cors'
 
 group :development, :test do
   gem "bullet"
