--- a/service-layer/Gemfile
+++ b/service-layer/Gemfile
@@ -3,62 +3,64 @@ git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 
 ruby "2.5.3"
 
-# Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
+# Bundle edge Rails instead: gem "rails", github: "rails/rails"
 gem "rails", "~> 5.2.1"
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
-# gem 'jbuilder', '~> 2.5'
+# gem "jbuilder", "~> 2.5"
 # Use Redis adapter to run Action Cable in production
-# gem 'redis', '~> 4.0'
+# gem "redis", "~> 4.0"
 # Use ActiveModel has_secure_password
-# gem 'bcrypt', '~> 3.1.7'
+# gem "bcrypt", "~> 3.1.7"
 
-gem "autoprefixer-rails", '~> 9.3.1'
-gem "delayed_job_active_record", '~> 4.1.3'
-gem "figaro", '~> 1.1.1'
-gem "high_voltage", '~> 3.1.0'
-gem "honeybadger", '~> 4.1.0'
-gem "httparty", '~> 0.16.2'
-gem "jquery-rails", '~> 4.3.3'
+gem "autoprefixer-rails", "~> 9.3.1"
+gem "delayed_job_active_record", "~> 4.1.3"
+gem "figaro", "~> 1.1.1"
+gem "high_voltage", "~> 3.1.0"
+gem "honeybadger", "~> 4.1.0"
+gem "httparty", "~> 0.16.2"
+gem "jquery-rails", "~> 4.3.3"
 gem "omniauth-canvas", github: "atomicjolt/omniauth-canvas"
-gem "pg", '~> 1.1.3'
-gem "puma", '~> 3.12.0'
-gem "rack-canonical-host", '~> 0.2.3'
-gem "recipient_interceptor", '~> 0.2.0'
+gem "pg", "~> 1.1.3"
+gem "puma", "~> 3.12.0"
+gem "rack-canonical-host", "~> 0.2.3"
+gem "rack-cors", "~> 1.0", ">= 1.0.2", require: "rack/cors"
+gem "recipient_interceptor", "~> 0.2.0"
 gem "rubocop", require: false
 gem "sass-rails", "~> 5.0"
-gem "skylight", '~> 3.1.1'
+gem "skylight", "~> 3.1.1"
 gem "sprockets", ">= 3.0.0"
-gem "title", '~> 0.0.7'
+gem "title", "~> 0.0.7"
 gem "tzinfo-data", platforms: %I[mingw mswin x64_mingw jruby]
-gem "uglifier", '~> 4.1.19'
-gem 'rack-cors', '~> 1.0', '>= 1.0.2', require: "rack/cors"
+gem "uglifier", "~> 4.1.19"
 
 # Reduces boot times through caching; required in config/boot.rb
 gem "bootsnap", ">= 1.1.0", require: false
 
-# The official AWS SDK for Ruby. Provides both resource oriented interfaces and API clients for AWS services.
-gem 'aws-sdk', '~> 3.0', '>= 3.0.1'
+# The official AWS SDK for Ruby. Provides both resource oriented interfaces
+# and API clients for AWS services.
+gem "aws-sdk", "~> 3.0", ">= 3.0.1"
 
 # Use Rack CORS for handling Cross-Origin Resource Sharing (CORS), making cross-origin AJAX possible
-# gem 'rack-cors'
+# gem "rack-cors"
 
 group :development, :test do
+  gem "annotate", "~> 2.7", ">= 2.7.2"
   gem "bullet"
   gem "byebug", platforms: %I[mri mingw x64_mingw]
   gem "factory_bot_rails"
+  gem "guard", "~> 2.14", ">= 2.14.2"
+  gem "guard-rspec", "~> 4.7", ">= 4.7.3", require: false
+  gem "hirb", "~> 0.7.3"
+  gem "pry-rails", "~> 0.3.6"
   gem "rspec-rails", "~> 3.6"
   gem "spring-commands-rspec"
   gem "suspenders"
-  gem 'pry-rails', '~> 0.3.6'
-  gem 'hirb', '~> 0.7.3'
-  gem 'annotate', '~> 2.7', '>= 2.7.2'
-  gem 'guard', '~> 2.14', '>= 2.14.2'
-  gem 'guard-rspec', '~> 4.7', '>= 4.7.3', require: false
 end
 
 group :development do
   gem "listen", ">= 3.0.5", "< 3.2"
-  # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
+  # Spring speeds up development by keeping your application running in the
+  # background. Read more: https://github.com/rails/spring
   gem "rspec"
   gem "spring"
   gem "spring-watcher-listen", "~> 2.0.0"
@@ -67,9 +69,9 @@ end
 group :test do
   gem "capybara-selenium"
   gem "chromedriver-helper"
-  gem "shoulda-matchers"
   gem "faker"
+  gem "shoulda-matchers"
+  gem "timecop"
   gem "vcr"
   gem "webmock"
-  gem "timecop"
 end
