--- a/service-layer/Gemfile
+++ b/service-layer/Gemfile
@@ -50,6 +50,7 @@ group :development, :test do
   gem "factory_bot_rails"
   gem "guard", "~> 2.14", ">= 2.14.2"
   gem "guard-rspec", "~> 4.7", ">= 4.7.3", require: false
+  gem 'guard-rubocop', '~> 1.3'
   gem "hirb", "~> 0.7.3"
   gem "pry-rails", "~> 0.3.6"
   gem "rspec-rails", "~> 3.6"
