--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,66 +1,75 @@
-# Ruby CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-ruby/ for more details
-#
 version: 2
+
 jobs:
-  build:
+  rubocop:
     docker:
-       - image: circleci/ruby:2.5.3-node-browsers
-
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/postgres:9.4
-
+      - image: circleci/ruby:2.5.3-node-browsers
     working_directory: ~/repo
-
     steps:
       - checkout
-
-      # Download and cache dependencies
-      - restore_cache:
-          keys:
-          - v1-dependencies-{{ checksum "service-layer/Gemfile.lock" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
-
       - run:
-          name: install dependencies
+          name: Make service layer the base directory
           command: |
-            cd ./service-layer
-            bundle install --path vendor/bundle
+            mv ./service-layer/* ./
+            rm -rf ./service-layer ./front-end
+      - run: bundle install --path vendor/bundle
+      - run: bundle exec rubocop
 
-      - save_cache:
-          paths:
-            - .service-layer/vendor/bundle
-          key: v1-dependencies-{{ checksum "service-layer/Gemfile.lock" }}
-
+  rspec:
+    docker:
+      - image: circleci/ruby:2.5.3-node-browsers
+        environment:
+          PGHOST: 127.0.0.1
+          PGUSER: sbaeli
+          RAILS_ENV: test
+      - image: circleci/postgres:9.4
+        environment:
+          POSTGRES_USER: sbaeli
+          POSTGRES_DB: sba-eli_test
+          POSTGRES_PASSWORD: ""
+    working_directory: ~/repo
+    steps:
+      - checkout
       - run:
-          name: rubocop
+          name: Make service layer the base directory
           command: |
-            cd ./service-layer
-            bundle exec rubocop
-      # Database setup
-      #- run: bundle exec rake db:create
-      #- run: bundle exec rake db:schema:load
-
-      # run rspec
+            mv ./service-layer/* ./
+            rm -rf ./service-layer ./front-end
+      - run: bundle install --path vendor/bundle
+      - run: bundle exec rake db:create
+      - run: bundle exec rake db:schema:load
       - run:
           name: rspec
           command: |
             mkdir /tmp/test-results
-            TEST_FILES="$(circleci tests glob "service-layer/spec/**/*_spec.rb" | circleci tests split --split-by=timings)"
-            cd ./service-layer
+            TEST_FILES="$(circleci tests glob "spec/**/*_spec.rb")"
             bundle exec rspec --format progress \
-                            --format RspecJunitFormatter \
-                            --out /tmp/test-results/rspec.xml \
-                            --format progress \
-                            $TEST_FILES
+                --out /tmp/test-results/rspec.xml \
+                --format progress \
+                $TEST_FILES
 
+      # Download and cache dependencies
+#      - restore_cache:
+#          keys:
+#          - v1-dependencies-{{ checksum "Gemfile.lock" }}
+          # fallback to using the latest cache if no exact match is found
+#          - v1-dependencies-
+      #- run:
+      #    name: install dependencies
+      #    command: bundle install --path vendor/bundle
+#      - save_cache:
+#          paths:
+#            - .vendor/bundle
+#          key: v1-dependencies-{{ checksum "Gemfile.lock" }}
       # collect reports
-      - store_test_results:
-          path: /tmp/test-results
-      - store_artifacts:
-          path: /tmp/test-results
-          destination: test-results
+#      - store_test_results:
+#          path: /tmp/test-results
+#      - store_artifacts:
+#          path: /tmp/test-results
+#          destination: test-results
+workflows:
+  version: 2
+  rubocop_and_rspec:
+    jobs:
+      - rubocop
+      - rspec
