--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,20 +15,13 @@ jobs:
       - restore_cache:
           keys:
             - v1-dependencies-{{ checksum "Gemfile.lock" }}
-          # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
       - run: bundle install --path vendor/bundle
       - run: bundle exec rubocop
       - save_cache:
-          paths:
-            - ./vendor/bundle
           key: v1-dependencies-{{ checksum "Gemfile.lock" }}
-      # collect reports
-      - store_test_results:
-          path: /tmp/test-results
-      - store_artifacts:
-          path: /tmp/test-results
-          destination: test-results
+          paths:
+            - vendor/bundle
 
   rspec:
     docker:
@@ -68,25 +61,6 @@ jobs:
                 --format progress \
                 $TEST_FILES
 
-      # Download and cache dependencies
-#      - restore_cache:
-#          keys:
-#          - v1-dependencies-{{ checksum "Gemfile.lock" }}
-          # fallback to using the latest cache if no exact match is found
-#          - v1-dependencies-
-      #- run:
-      #    name: install dependencies
-      #    command: bundle install --path vendor/bundle
-#      - save_cache:
-#          paths:
-#            - .vendor/bundle
-#          key: v1-dependencies-{{ checksum "Gemfile.lock" }}
-      # collect reports
-#      - store_test_results:
-#          path: /tmp/test-results
-#      - store_artifacts:
-#          path: /tmp/test-results
-#          destination: test-results
 workflows:
   version: 2
   rubocop_and_rspec:
