--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,6 +59,11 @@ jobs:
                 --out /tmp/test-results/rspec.xml \
                 --format progress \
                 $TEST_FILES
+      - store_test_results:
+          path: /tmp/test-results
+      - store_artifacts:
+          path: /tmp/test-results
+          destination: test-results
 
 workflows:
   version: 2
