changing name of test database

--- a/service-layer/config/canvas_database.yml
+++ b/service-layer/config/canvas_database.yml
@@ -9,7 +9,7 @@ development: &default
 
 test:
   <<: *default
-  database: sba-eli_test
+  database: canvas_test
 
 production: &deploy
   encoding: utf8
