--- a/service-layer/.rubocop.yml
+++ b/service-layer/.rubocop.yml
@@ -210,6 +210,7 @@ Metrics/LineLength:
   Description: 'Limit lines to 80 characters.'
   StyleGuide: 'https://github.com/bbatsov/ruby-style-guide#80-character-limits'
   Max: 100
+  IgnoredPatterns: ['\A#']
 
 Metrics/MethodLength:
   Description: 'Avoid methods longer than 10 lines of code.'
