--- a/service-layer/config/database.yml
+++ b/service-layer/config/database.yml
@@ -4,6 +4,7 @@ development: &default
   username: <%= ENV.fetch("POSTGRES_USER", "") %>
   password: <%= ENV.fetch("POSTGRES_PASSWORD", "") %>
   host: <%= ENV.fetch("POSTGRES_HOST", "") %>
+  port: <%= ENV.fetch("POSTGRES_PORT", "") %>
   encoding: utf8
   min_messages: warning
   pool: <%= Integer(ENV.fetch("DB_POOL", 5)) %>
