--- a/service-layer/Gemfile
+++ b/service-layer/Gemfile
@@ -30,7 +30,7 @@ gem "sass-rails", "~> 5.0"
 gem "skylight", "~> 3.1.1"
 gem "sprockets", ">= 3.0.0"
 gem "title", "~> 0.0.7"
-gem "tzinfo-data", platforms: %I[mingw mswin x64_mingw jruby]
+gem "tzinfo-data"
 gem "uglifier", "~> 4.1.19"
 
 # Reduces boot times through caching; required in config/boot.rb
