--- a/service-layer/Gemfile
+++ b/service-layer/Gemfile
@@ -53,7 +53,7 @@ group :development, :test do
   gem "guard-rubocop", "~> 1.3"
   gem "hirb", "~> 0.7.3"
   gem "pry-rails", "~> 0.3.6"
-  gem "rspec-rails", "~> 3.6"
+  gem "rspec-rails", "~> 3.8"
   gem "spring-commands-rspec"
   gem "suspenders", "~> 1.49"
 end
@@ -70,6 +70,7 @@ end
 group :test do
   gem "capybara-selenium"
   gem "chromedriver-helper"
+  gem "database_cleaner", "~> 1.7"
   gem "faker"
   gem "shoulda-matchers"
   gem "timecop"
