addition of user flag

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -142,7 +142,7 @@ jobs:
       - run:
           name: Install ecs-deploy
           command: |
-            pip install ecs-deploy
+            pip install ecs-deploy --user
       - run:
           name: Run database migration
           command: |
