--- a/service-layer/Gemfile
+++ b/service-layer/Gemfile
@@ -32,6 +32,7 @@ gem "sprockets", ">= 3.0.0"
 gem "title", "~> 0.0.7"
 gem "tzinfo-data", platforms: %I[mingw mswin x64_mingw jruby]
 gem "uglifier", "~> 4.1.19"
+gem "will_paginate", "~> 3.1", ">= 3.1.6"
 
 # Reduces boot times through caching; required in config/boot.rb
 gem "bootsnap", ">= 1.1.0", require: false
