--- a/front-end/package.json
+++ b/front-end/package.json
@@ -9,8 +9,10 @@
     "query-string": "^6.2.0",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
+    "react-player": "^1.7.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.0",
+    "screenfull": "^3.3.3",
     "semantic-ui-react": "^0.83.0"
   },
   "scripts": {
