SBAELIDEV-225 Add ESLint for front-end

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,9 +79,32 @@ jobs:
           path: /tmp/test-results
           destination: test-results
 
+  eslint:
+    docker:
+      - image: circleci/ruby:2.5.3-node-browsers
+    working_directory: ~/repo
+    steps:
+      - checkout
+      - run:
+          name: Make front end the base directory
+          command: |
+            cp -r ./front-end/. ./
+            rm -rf ./service-layer ./front-end
+      - restore_cache:
+          keys:
+            - front-end-dependencies-{{ checksum "yarn.lock" }}
+      - run: yarn install
+      - run: yarn eslint ./src
+      - save_cache:
+          key: front-end-dependencies-{{ checksum "yarn.lock" }}
+          paths:
+            - node_modules
+
+
 workflows:
   version: 2
   rubocop_and_rspec:
     jobs:
       - rubocop
       - rspec
+      - eslint
