Jobs cannot reference jobs in other workflows

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -163,12 +163,5 @@ workflows:
       - rspec
   build_and_deploy:
     jobs:
-      - build:
-          requires:
-            - rubocop
-            - rspec
-      - deploy:
-          requires:
-            - rubocop
-            - rspec
-            - build
+      - build
+      - deploy
