--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -164,4 +164,6 @@ workflows:
   build_and_deploy:
     jobs:
       - build
-      - deploy
+      - deploy:
+          requires:
+            - build
