--- a/service-layer/config/database.yml
+++ b/service-layer/config/database.yml
@@ -1,10 +1,6 @@
 development: &default
   adapter: postgresql
-  database: <%= ENV.fetch("POSTGRES_DB", "sba-eli_development") %>
-  username: <%= ENV.fetch("POSTGRES_USER", "") %>
-  password: <%= ENV.fetch("POSTGRES_PASSWORD", "") %>
-  host: <%= ENV.fetch("POSTGRES_HOST", "localhost") %>
-  port: <%= ENV.fetch("POSTGRES_PORT", "5432") %>
+  database: sba-eli_development
   encoding: utf8
   min_messages: warning
   pool: <%= Integer(ENV.fetch("DB_POOL", 5)) %>
