Revert "Remove hardcoded variables"

--- a/service-layer/.gitignore
+++ b/service-layer/.gitignore
@@ -16,7 +16,10 @@
 /tags
 /tmp/*
 /yarn-error.log
-.env
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+
+# Ignore application configuration
+/config/application.yml
